--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2018-09-26  Theppitak Karoonboonyanan  <theppitak@gmail.com>
+
+	Viravong: Normalize vertical stems.
+
+	* fonts/Viravong.sfd:
+	  - Add StdVW, StemSnapV
+	  - Adjust vertical stems of all glyphs to the snaps
+	  - Bump font version to 001.002
+
 2018-09-14  Theppitak Karoonboonyanan  <theppitak@gmail.com>
 
 	Viravong: Add BlueValues & Adjust ascender/descender.
