--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2018-10-02  Theppitak Karoonboonyanan  <theppitak@gmail.com>
+
+	Viravong: Normalize horizontal stems.
+
+	* fonts/Viravong.sfd:
+	  - Add StdHW, StemSnapH
+	  - Adjust horizontal stems of all glyphs to the snaps
+	  - Adjust shapes of some glyphs as appropriate
+	  - Bump font version to 001.003
+
 2018-09-26  Theppitak Karoonboonyanan  <theppitak@gmail.com>
 
 	Viravong: Normalize vertical stems.
