--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2018-10-08  Theppitak Karoonboonyanan  <theppitak@gmail.com>
+
+	Viravong: Add GPOS lookups & anchors
+
+	* fonts/Viravong.sfd:
+	  - Add GPOS lookups and anchor classes "AboveBase", "BelowBase",
+	    "AboveMark", "BelowMark".
+	  - Add anchors to all relevant glyphs
+	  - Bump font version to 001.004
+
 2018-10-02  Theppitak Karoonboonyanan  <theppitak@gmail.com>
 
 	Viravong: Normalize horizontal stems.
