--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2018-10-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>
 
+	Viravong: Set OS/2 values
+
+	* fonts/Viravong.sfd:
+	  - Set PFM Family to Sans Serif
+	  - Set Win Ascent, WinDescent, HHead Ascent, HHead Descent
+	    to cover marks lifted by GPOS
+	  - Bump font version to 001.007
+
+2018-10-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>
+
 	Viravong: Add Latin glyphs from TLWG Garuda
 
 	* fonts/Viravong.sfd:
