--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2021-10-26  Theppitak Karoonboonyanan  <theppitak@gmail.com>
 
+	Khottabun: Set OS/2 proper Typo metrics
+
+	* fonts/Khottabun.sfd:
+	  - Set OS/2 TypoAscent, TypoDescent to the same absolute values
+	    as WinAscent, WinDescent.
+	  - Bump font version to 002.020.
+
+2021-10-26  Theppitak Karoonboonyanan  <theppitak@gmail.com>
+
 	Update configure script.
 
 	* configure.ac:
