--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2025-03-21  Theppitak Karoonboonyanan  <theppitak@gmail.com>
 
+	Khottabun: Correct spline direction for Mai Kong.
+
+	* fonts/Khottabun.sfd:
+	  - Make spline of uni1A6B (Mai Kong) clockwise.
+	  - Bump font version to 002.022.
+
+2025-03-21  Theppitak Karoonboonyanan  <theppitak@gmail.com>
+
 	Khottabun: Set 'lana' script for ANG-LAN GSUBs.
 
 	* fonts/Khottabun.sfd:
